﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:
		TODO
		
	Bug Fixes:
		-Behavior of Contains, ContainsAll, and ContainsAny overloads changed for work item 10480.
		 The overloads of the Contains, ContainsAll, and ContainsAny methods for collections had inconsistent
		 behavior. While some overloads used the ICollection<T>.Contains or IList.Contains method of the
		 validated collection, others iterated the collection itself to determine whether a
		 collection contained the specified value. This resulted in different behavior on some collections
		 that did not use default equality. The behavior is now fixed, but it comes with some costs. Using
		 those methods on ordered sets (like HashSet<T> and SortedList<T>) is now slower than before.
		-The internal CollectionHelper class had a dependency on the .NET 3.5 type HashSet<T>. This dependency
		 is removed and it's now more likely that CuttingEdge.Conditions can be used in .NET 2.0 projects.
		 You'd still need C# 3.0 though. The library has now only one method that you can not call without
		 .NET 3.5 installed: the Evaluate(Expression<Func<T, bool>>) method.
		
	Code changes:
		-[BREAKING CHANGE] The overload Validator<T>.Otherwise<TException>(string) has been removed for work
		 item 10497.
		 The Otherwise method allows a user to specify the type of exception that has to be thrown. This
		 second overload allows specifying an alternative exception message, but it's behavior was counter-
		 intuitive.	It replaced any message that was supplied in a validation method. Best solution was to
		 completely remove this overload from the library. This makes the library more consistent and easier
		 to use.		 
		-A TraceListener class called ‘UnitTestTraceListener’ has been added to the UnitTest project and 
		 configured to be the default trace listener in the project's app.config. The trace listener ensures